learned simple animation using keyframe

--- a/Transition.html
+++ b/Transition.html
@@ -12,6 +12,8 @@
         <div class="box box2">Translate Y</div>
         <div class="box box3">Translate X&Y</div>
         <div class="box box4">Rotate</div>
+        <div class="box box5">Rotate</div>
+        <div class="box box6">Rotate</div>
     </div>
 </body>
 </html>
